Fieldset should allow whitespaces even though LayoutFlexibleBox doesn't.

Restore the correct behaviour for canHaveWhitespaceChildren to return
true for <fieldset> because it was changed when LayoutFieldSet was
switched to use LayoutFlexibleBox.

Revert some incorrectly rebaselined tests from https://crrev.com/419570.
For example: it's expected to have a trailing empty LayoutText for a
fieldset layout object. See fieldset-align-expected.txt

BUG=648209

Review-Url: https://codereview.chromium.org/2373223002
Cr-Commit-Position: refs/heads/master@{#421911}